# rust-wasm-geojsonviewer-demo

./: Cargo.toml  README.md  index.html
assets/: sw.js
docs/: egui_example-9203dfe071203c85066b1583fd567f861bc6d7dd39dc3e4b59685b95e40225bd824b75ced2b0145576e59780f950a7ac.js  egui_example-9203dfe071203c85066b1583fd567f861bc6d7dd39dc3e4b59685b95e40225bd824b75ced2b0145576e59780f950a7ac_bg.wasm  index.html
src/: app.rs  main.rs
